add section experience

--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
                     </span>
                     <p>projects.html</p>
                 </div>
+                <div class="explorer-list-item" data-tab-target="#experience">
+                    <span class="explorer-icon-container">
+                        <img class="icon-image" alt="python icon" src="icones/python-icon.svg">
+
+                    </span>
+                    <p>experience.py</p>
+                </div>
                 <div class="explorer-list-item" data-tab-target="#contact">
                     <span class="explorer-icon-container">
                         <img class="icon-image" alt="js icon" src="icones/js-icon.svg">
@@ -131,6 +138,12 @@
                         <img class="icon-image" alt="html icon" src="icones/html-icon.svg">
                     </span>
                     <p>projects.html</p>
+                </div>
+                <div class="tab-item" data-tab-target="#experience">
+                    <span class="tabs-icon-container">
+                        <img class="icon-image" alt="python icon" src="icones/python-icon.svg">
+                    </span>
+                    <p>experience.py</p>
                 </div>
                 <div class="tab-item" data-tab-target="#contact">
                     <span class="tabs-icon-container">
@@ -210,6 +223,11 @@
                                         &nbsp;&nbsp;&nbsp;&nbsp;
                                         <span class="css-name">github</span>:
                                         <a class="css-btn" href="https://github.com/Haiko333" target="_blank" rel="noopener"><span class="css-info">Haiko333</span></a>;
+                                    </p>
+                                    <p class="css-line">
+                                        &nbsp;&nbsp;&nbsp;
+                                        <span class="css-name">discord</span>:
+                                        <a class="css-btn" href="https://discord.com/users/1089475809300971550" target="_blank" rel="noopener"><span class="css-info">h41k0.</span></a>;
                                     </p>
                                     <p class="css-line">
                                         }
@@ -350,15 +368,15 @@
                                         <p>
                                             Dans le cadre d'une SAE en 1ère année de BUT Informatique, nous avons du réaliser un chatbot capable de répondre
                                             à des questions de culture générale. Il est capable d'apprendre de nouvelle information et peux répondre en contexte.
-                                        </p>          
+                                        </p>
                                         <p>
                                             <span>Objectifs :</span>
                                             Maîtriser la Programmation Orientée Objet et la gestion des flux de données.
-                                        </p>            
+                                        </p>
                                         <p>
                                             <span>Travail en groupe :</span>
                                             Projet réalisé en binôme dans le cadre d'une SAE en 1ère année.
-                                        </p>            
+                                        </p>
                                         <p>
                                             <span>Travail individuel :</span>
                                             Conception de l'algorithme de filtrage des mots-clés et gestion de la base de connaissances.
@@ -393,15 +411,15 @@
                                         <p>
                                             Dans le cadre d'une SAE en 1ère année de BUT Informatique, nous avons du réaliser un chatbot capable de répondre
                                             à des questions de culture générale. Il est capable d'apprendre de nouvelle information et peux répondre en contexte.
-                                        </p>          
+                                        </p>
                                         <p>
                                             <span>Objectifs :</span>
                                             Maîtriser la Programmation Orientée Objet et la gestion des flux de données.
-                                        </p>            
+                                        </p>
                                         <p>
                                             <span>Travail en groupe :</span>
                                             Projet réalisé en binôme dans le cadre d'une SAE en 1ère année.
-                                        </p>            
+                                        </p>
                                         <p>
                                             <span>Travail individuel :</span>
                                             Conception de l'algorithme de filtrage des mots-clés et gestion de la base de connaissances.
@@ -429,20 +447,19 @@
                                     </h3>
                                     <div class="project-ppp-info">
                                         <p>
-                                            Dans le cadre d'une SAE en 1ère année de BUT Informatique, nous avons du réaliser un chatbot capable de répondre
-                                            à des questions de culture générale. Il est capable d'apprendre de nouvelle information et peux répondre en contexte.
-                                        </p>          
+                                            A définir
+                                        </p>
                                         <p>
                                             <span>Objectifs :</span>
-                                            Maîtriser la Programmation Orientée Objet et la gestion des flux de données.
-                                        </p>            
+                                            A définir
+                                        </p>
                                         <p>
                                             <span>Travail en groupe :</span>
-                                            Projet réalisé en binôme dans le cadre d'une SAE en 1ère année.
-                                        </p>            
+                                            A définir
+                                        </p>
                                         <p>
                                             <span>Travail individuel :</span>
-                                            Conception de l'algorithme de filtrage des mots-clés et gestion de la base de connaissances.
+                                            A définir
                                         </p>
                                     </div>
                                     <hr>
@@ -458,9 +475,90 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="project-card">
+                                <div class="project-image-container">
+                                    <span><img src="images/portfolio.png"></span>
+                                </div>
+                                <div class="project-card-content">
+                                    <h3>
+                                        Eurobot 2025
+                                        <img class="project-card-skill" alt="c-icon" src="icones/c-icon.svg">
+                                    </h3>
+                                    <div class="project-ppp-info">
+                                        <p>
+                                            En terminal STI2D, nous avons participé à un concours national appelé Eurobot. Il fallait réaliser un robot
+                                            capable de se deplacer pour réaliser des tâches.
+                                        </p>          
+                                        <p>
+                                            <span>Objectifs :</span>
+                                            A définir
+                                        </p>
+                                        <p>
+                                            <span>Travail en groupe :</span>
+                                            A définir
+                                        </p>
+                                        <p>
+                                            <span>Travail individuel :</span>
+                                            A définir
+                                        </p>
+                                    </div>
+                                    <hr>
+                                    <div class="links-list">
+                                        <a class="link-btn" href="https://github.com/Haiko333/eurobot2025" target="_blank" rel="noopener">
+                                            <span class="link-btn-icon"><img alt="github" src="icones/github-icon.svg"></span>
+                                            <span class="link-btn-text">Github</span>
+                                        </a>
+                                        <a class="link-btn" href="https://www.eurobot.org/eurobot-contest/eurobot-2025/" target="_blank" rel="noopener">
+                                            <span class="link-btn-icon"><img alt="eurobot" src="icones/link-icon.svg"></span>
+                                            <span class="link-btn-text">Eurobot</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <div id="experience" data-tab-content class="layout-content">
+    <div class="experience-wrapper">
+        <h2 class="experience-main-title">Expérience <span>Professionnelle</span></h2>
+        
+        <div class="experience-container">
+            <div class="exp-card">
+                <div class="exp-header">
+                    <span class="codicon codicon-graph exp-icon"></span>
+                    <h3>Yoko Bots</h3>
+                </div>
+                <p class="exp-date">Mai 2025 - Aujourd'hui</p>
+                <p class="exp-text">
+                    A definir
+                </p>
+            </div>
+
+            <div class="exp-card">
+                <div class="exp-header">
+                    <span class="codicon codicon-pulse exp-icon"></span>
+                    <h3>Technicien Réseaux & Informatique</h3>
+                </div>
+                <p class="exp-date">Janvier 2025 - Aujourd'hui</p>
+                <p class="exp-text">
+                    A definir
+                </p>
+            </div>
+
+            <div class="exp-card">
+                <div class="exp-header">
+                    <span class="codicon codicon-server-process exp-icon"></span>
+                    <h3>Développeur Discord Freelance</h3>
+                </div>
+                <p class="exp-date">2021 - Aujourd'hui</p>
+                <ul class="exp-text">
+                    Développement de bot discord sur mesure
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
                 <div id="contact" data-tab-content class="layout-content">
                     <div class="contact-wrapper">
