--- a/index.html
+++ b/index.html
@@ -5,12 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Haiko | Portfolio</title>
+    <meta name="description" content="Portfolio de Haiko, etudiant en 1ere annee de BUT Informatique a l'IUT2 de Grenoble. Decouvrez mes projets, competences et experiences en developpement web et programmation.">
+    <meta name="keywords" content="Haiko, portfolio, developpeur, BUT Informatique, IUT2 Grenoble, front-end, JavaScript, Java, HTML, CSS, projets">
+    <meta name="author" content="Haiko">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://haiko333.github.io/portfolio-vscode/">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Haiko | Portfolio">
+    <meta property="og:description" content="Portfolio de Haiko, etudiant en 1ere annee de BUT Informatique. Projets, competences et experiences en developpement.">
+    <meta property="og:url" content="https://haiko333.github.io/portfolio-vscode/">
+    <meta property="og:image" content="https://haiko333.github.io/portfolio-vscode/images/favicon.png">
+    <meta property="og:locale" content="fr_FR">
+    <meta property="og:site_name" content="Haiko Portfolio">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Haiko | Portfolio">
+    <meta name="twitter:description" content="Portfolio de Haiko, etudiant en 1ere annee de BUT Informatique a l'IUT2 de Grenoble.">
+    <meta name="twitter:image" content="https://haiko333.github.io/portfolio-vscode/images/favicon.png">
+
+    <meta name="theme-color" content="#1c2024">
+
+    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="apple-touch-icon" href="images/favicon.png">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@vscode/codicons@0.0.41/dist/codicon.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="sections.css">
     <script src="main.js" defer></script>
-    <link rel="icon" type="image/x-icon" href="images/favicon.png">
-    <title>Haiko | Portfolio</title>
 </head>
 
 <body>
