--- a/index.html
+++ b/index.html
@@ -11,25 +11,28 @@
     <meta name="keywords" content="Haiko, portfolio, developpeur, BUT Informatique, IUT2 Grenoble, front-end, JavaScript, Java, HTML, CSS, projets">
     <meta name="author" content="Haiko">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://haiko333.github.io/portfolio-vscode/">
+    <link rel="canonical" href="https://h41k0.xyz/">
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="Haiko | Portfolio">
     <meta property="og:description" content="Portfolio de Haiko, etudiant en 1ere annee de BUT Informatique. Projets, competences et experiences en developpement.">
-    <meta property="og:url" content="https://haiko333.github.io/portfolio-vscode/">
-    <meta property="og:image" content="https://haiko333.github.io/portfolio-vscode/images/favicon.png">
+    <meta property="og:url" content="https://h41k0.xyz/">
+    <meta property="og:image" content="https://h41k0.xyz/images/favicon.png">
     <meta property="og:locale" content="fr_FR">
     <meta property="og:site_name" content="Haiko Portfolio">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Haiko | Portfolio">
     <meta name="twitter:description" content="Portfolio de Haiko, etudiant en 1ere annee de BUT Informatique a l'IUT2 de Grenoble.">
-    <meta name="twitter:image" content="https://haiko333.github.io/portfolio-vscode/images/favicon.png">
+    <meta name="twitter:image" content="https://h41k0.xyz/images/favicon.png">
 
-    <meta name="theme-color" content="#1c2024">
+    <meta name="theme-color" content="#7517db">
 
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="apple-touch-icon" href="images/favicon.png">
+
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+    <link rel="preconnect" href="https://ghchart.rshah.org" crossorigin>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@vscode/codicons@0.0.41/dist/codicon.css">
     <link rel="stylesheet" href="style.css">
@@ -41,7 +44,7 @@
         <img src="icones/loader-icon.svg" alt="Loading..." class="loader-icon">
     </div>
 
-    <section class="window-nav-bar">
+    <header class="window-nav-bar" role="banner">
         <span class="vscode-logo-container">
             <img class="icon-image" alt="vscode icon" src="icones/vscode-icon.svg">
         </span>
@@ -62,7 +65,7 @@
             <span class="codicon codicon-chrome-close"></span>
 
         </div>
-    </section>
+    </header>
     <div class="main-container">
         <div class="side-bar">
             <div>
@@ -180,7 +183,7 @@
                 <div id="home" data-tab-content class="layout-content active">
                     <div class="layout-content-wrapper">
                         <div class="home-container">
-                            <h1 class="home-title">Hi<span>!</span><span><br>I'M <span>HAIKO</span></h1>
+                            <h1 class="home-title">Hi<span>!</span><br>I'M <span>HAIKO</span></h1>
                             <h1 class="home-job-title">Front-End Developer</h1>
                             <button class="home-button" data-tab-target="#projects">Projects</button>
                             <button class="home-button" data-tab-target="#contact">Contact</button>
@@ -195,7 +198,7 @@
                             </p>
                         </div>
                         <div class="image-container">
-                            <img style="width:100%" src="images/home.svg">
+                            <img style="width:100%" src="images/home.svg" alt="Illustration accueil" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -310,7 +313,7 @@
                                 </div>
                             </div>
                             <div class="about-image-container">
-                                <img src="images/about.svg" alt="About">
+                                <img src="images/about.svg" alt="Illustration a propos" loading="lazy">
                             </div>
                         </div>
                         <div class="skills-tools-row">
@@ -349,7 +352,7 @@
     
                             <div class="chart-github-container">
                                 <div class="chart-github">
-                                    <img src="https://ghchart.rshah.org/7517db/Haiko333" alt="Haiko333 Github chart"/>
+                                    <img src="https://ghchart.rshah.org/7517db/Haiko333" alt="Graphique de contributions GitHub de Haiko333" loading="lazy"/>
                                 </div>
         
                                 <div class="chart-legend">
@@ -379,7 +382,7 @@
                         <div class="project-cards-container">
                             <div class="project-card">
                                 <div class="project-image-container">
-                                    <span><img src="images/chatbot.png"></span>
+                                    <span><img src="images/chatbot.png" alt="Apercu du projet Chatbot de culture" loading="lazy"></span>
                                 </div>
                                 <div class="project-card-content">
                                     <h3>
@@ -420,7 +423,7 @@
                             </div>
                             <div class="project-card">
                                 <div class="project-image-container">
-                                    <span><img src="images/portfolio.png"></span>
+                                    <span><img src="images/portfolio.png" alt="Apercu du projet Portfolio" loading="lazy"></span>
                                 </div>
                                 <div class="project-card-content">
                                     <h3>
@@ -459,7 +462,7 @@
                             </div>
                             <div class="project-card">
                                 <div class="project-image-container">
-                                    <span><img src="images/portfolio.png"></span>
+                                    <span><img src="images/portfolio.png" alt="Apercu du projet Yoko Bots" loading="lazy"></span>
                                 </div>
                                 <div class="project-card-content">
                                     <h3>
@@ -500,7 +503,7 @@
                             </div>
                             <div class="project-card">
                                 <div class="project-image-container">
-                                    <span><img src="images/portfolio.png"></span>
+                                    <span><img src="images/portfolio.png" alt="Apercu du projet Eurobot 2025" loading="lazy"></span>
                                 </div>
                                 <div class="project-card-content">
                                     <h3>
@@ -575,9 +578,9 @@
                     <h3>Développeur Discord Freelance</h3>
                 </div>
                 <p class="exp-date">2021 - Aujourd'hui</p>
-                <ul class="exp-text">
+                <p class="exp-text">
                     Développement de bot discord sur mesure
-                </ul>
+                </p>
             </div>
         </div>
     </div>
@@ -591,7 +594,6 @@
             </main>
         </div>
     </div>
-</body>
 <footer class="status-bar">
     <div class="status-left">
         <div class="status-item git-branch">
@@ -628,4 +630,5 @@
         </div>
     </div>
 </footer>
+</body>
 </html>
